# disobey2026badge

./: Cargo.toml  Dockerfile  README.md  build-all-examples.sh  build.rs  convert_png.py  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
examples/: backlight.rs  breakout.rs  buttons.rs  demoscene.rs  display.rs  display_patterns.rs  image.rs  led_bars.rs  leds.rs  microphone.rs  nametag.rs  shader.rs  skyroads.rs  space_shooter.rs  task_switch.rs  tetris.rs  vectordemo.rs  vertical_scroll.rs  vibration.rs
src/: backlight.rs  buttons.rs  display.rs  leds.rs  lib.rs  microphone.rs  vibration.rs
